# chatgpt_api

./: README.md  pyproject.toml
src/chatgpt_api/: summarize.py
src/summarizer_gpt/: summarize.py
