[tool.poetry]
name = "summarizer_gpt"
version = "0.1.0"
description = "API to communicate with ChatGPT"
authors = ["Ambuj Pawar <pawar.ambuj@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
tiktoken = "^0.3.2"
python-dotenv = "^1.0.0"
gradio = "^3.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
